[GREEN] Implement PaymentServiceImpl